--- a/arch/arm/configs/ts4600_defconfig
+++ b/arch/arm/configs/ts4600_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Thu Oct 30 12:24:20 2014
+# Fri Nov 14 17:51:51 2014
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -830,10 +830,10 @@ CONFIG_RAW_DRIVER=m
 CONFIG_MAX_RAW_DEVS=8192
 # CONFIG_TCG_TPM is not set
 # CONFIG_RAMOOPS is not set
-CONFIG_I2C=m
+CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
-# CONFIG_I2C_CHARDEV is not set
+CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_HELPER_AUTO=y
 
 #
@@ -845,7 +845,7 @@ CONFIG_I2C_HELPER_AUTO=y
 #
 # CONFIG_I2C_DESIGNWARE is not set
 # CONFIG_I2C_GPIO is not set
-CONFIG_I2C_MXS=m
+CONFIG_I2C_MXS=y
 CONFIG_I2C_MXS_SELECT0=y
 # CONFIG_I2C_MXS_SELECT0_PIOQUEUE_MODE is not set
 # CONFIG_I2C_MXS_SELECT1 is not set
@@ -1020,9 +1020,9 @@ CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
-CONFIG_FB_CFB_FILLRECT=y
-CONFIG_FB_CFB_COPYAREA=y
-CONFIG_FB_CFB_IMAGEBLIT=y
+CONFIG_FB_CFB_FILLRECT=m
+CONFIG_FB_CFB_COPYAREA=m
+CONFIG_FB_CFB_IMAGEBLIT=m
 # CONFIG_FB_CFB_REV_PIXELS_IN_BYTE is not set
 CONFIG_FB_SYS_FILLRECT=m
 CONFIG_FB_SYS_COPYAREA=m
@@ -1038,9 +1038,9 @@ CONFIG_FB_SYS_FOPS=m
 #
 # Frame buffer hardware drivers
 #
-CONFIG_FB_MXS=y
+CONFIG_FB_MXS=m
 # CONFIG_FB_MXS_LCD_43WVF1G is not set
-CONFIG_FB_MXS_LCD_OKAYA7=y
+CONFIG_FB_MXS_LCD_OKAYA7=m
 # CONFIG_FB_MXS_LCD_LMS430 is not set
 # CONFIG_FB_MXS_TVENC is not set
 # CONFIG_FB_S1D13XXX is not set
